--- a/Intentions-alpha/Base.lproj/Main.storyboard
+++ b/Intentions-alpha/Base.lproj/Main.storyboard
@@ -15,10 +15,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--LoginVC-->
+        <!--RegisterVC-->
         <scene sceneID="0J7-Pp-ivT">
             <objects>
-                <viewController id="1W7-ZF-KSH" customClass="LoginVC" customModule="Intentions_alpha" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="1W7-ZF-KSH" customClass="RegisterVC" customModule="Intentions_alpha" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ewl-pI-kce"/>
                         <viewControllerLayoutGuide type="bottom" id="ATw-b6-qeP"/>
@@ -40,6 +40,9 @@
                                 <state key="normal" title="Login">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="loginBtnPressed:" destination="1W7-ZF-KSH" eventType="touchUpInside" id="4kH-sc-cI9"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rja-ZG-Aj6">
                                 <rect key="frame" x="187" y="184.5" width="1" height="38"/>
@@ -144,6 +147,9 @@
                                 <state key="normal" title="Register">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="registerBtnPressed:" destination="1W7-ZF-KSH" eventType="touchUpInside" id="iGg-oT-ziW"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431369999995" green="0.74117647060000003" blue="0.76470588240000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -160,15 +166,21 @@
                             <constraint firstItem="ATw-b6-qeP" firstAttribute="top" secondItem="Glk-t0-5Q5" secondAttribute="bottom" constant="40" id="xWc-G1-7cy"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="confirmPassTxt" destination="6FU-gs-wxl" id="4Xa-ET-Ry9"/>
+                        <outlet property="emailTxt" destination="oMA-Cg-A9w" id="ncG-Af-Aq5"/>
+                        <outlet property="nameTxt" destination="xp4-Nb-Cia" id="RmY-ot-HCt"/>
+                        <outlet property="passTxt" destination="cvk-R6-uX8" id="Qlh-ZJ-khk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U2E-uT-ZxM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1156" y="-358.4707646176912"/>
         </scene>
-        <!--RegisterVC-->
+        <!--LoginVC-->
         <scene sceneID="FUG-7t-bjf">
             <objects>
-                <viewController id="hQr-g2-lla" customClass="RegisterVC" customModule="Intentions_alpha" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="hQr-g2-lla" customClass="LoginVC" customModule="Intentions_alpha" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ek7-hu-wgI"/>
                         <viewControllerLayoutGuide type="bottom" id="PU2-SZ-oNQ"/>
@@ -178,15 +190,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="duZ-TK-Dl5">
-                                <rect key="frame" x="208" y="184.5" width="73" height="38"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="19"/>
+                                <rect key="frame" x="208" y="184.5" width="71" height="38"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="19"/>
                                 <state key="normal" title="Register">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="registerBtnPressed:" destination="hQr-g2-lla" eventType="touchUpInside" id="yVC-HD-5qf"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LB6-pK-xQA">
-                                <rect key="frame" x="118" y="184.5" width="49" height="38"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="19"/>
+                                <rect key="frame" x="117" y="184.5" width="50" height="38"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="19"/>
                                 <state key="normal" title="Login">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -252,6 +267,9 @@
                                 <state key="normal" title="Login">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="loginBtnPressed:" destination="hQr-g2-lla" eventType="touchUpInside" id="zoW-VH-LuC"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431369999995" green="0.74117647060000003" blue="0.76470588240000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -268,6 +286,10 @@
                             <constraint firstItem="LB6-pK-xQA" firstAttribute="centerY" secondItem="Z9k-fb-gNV" secondAttribute="centerY" id="zQO-Tb-kZY"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailTxt" destination="yM6-fX-eAu" id="fOk-0Y-15c"/>
+                        <outlet property="passTxt" destination="vxb-lA-5lP" id="GoJ-re-lgd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xap-3a-nZ4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -301,6 +323,9 @@
                                             <constraint firstAttribute="height" constant="30" id="yL7-bR-6gt"/>
                                         </constraints>
                                         <state key="normal" image="addChannelButton"/>
+                                        <connections>
+                                            <action selector="addGoalBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xRb-N8-BfT"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BDd-at-Jkg">
                                         <rect key="frame" x="13" y="30" width="25" height="25"/>
@@ -309,6 +334,9 @@
                                             <constraint firstAttribute="width" constant="25" id="oqX-DY-ipH"/>
                                         </constraints>
                                         <state key="normal" image="smackBurger"/>
+                                        <connections>
+                                            <action selector="menuBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Pb-F6-JwT"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.96078431372549022" green="0.74117647058823533" blue="0.76470588235294112" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -401,6 +429,9 @@
                             <constraint firstItem="wHY-f5-g36" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-80" id="q4r-df-WwI"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="iyM-Iz-BNX" id="kbd-Kc-EKb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
